--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -8,4 +8,11 @@
 
 .feedWrapper{
     padding: 20px;
+    min-width: 50%;
+}
+
+@media screen and (max-width: 600px){
+    .feedWrapper {
+        min-width: 90%;
+    }
 }
